tests/data/bad/bad_inherit_changes.py
from __future__ import annotations

from cfg import CN
from tests.data.bad.bad_inherit import cfg

cfg = CN(cfg)
